# Platformer3D

./: CMakeLists.txt  README.md
res/shaders/: shader.vert
src/: Camera.cpp  Camera.hpp  Defines.hpp  Drawable.cpp  Drawable.hpp  MeshMaker.cpp  MeshMaker.hpp  PrimitiveShapes.cpp  PrimitiveShapes.hpp  RenderTarget.cpp  RenderTarget.hpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp  TexturedCube.cpp  TexturedCube.hpp  TexturedSurface.cpp  TexturedSurface.hpp  Transformable.cpp  Transformable.hpp  VertexBuffer.cpp  VertexBuffer.hpp  main.cpp
